--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ body {
 
 .container {
   width: 100%;
-  max-width: 600px;
+  max-width: 700px;
   margin: 0 auto;
   background-color: #94d6ba;
   border-radius: 15px;
@@ -114,9 +114,10 @@ body {
 .figure-container {
   flex: 1;
   margin-left: 15px;
-  padding: 120px 0 ;
+  padding: 220px 0 ;
   cursor: pointer;
-  border: 1px solid black;
+  border: 1px solid #2a332f;
+  border-radius: 10px;
 }
 
 .constructor {
